Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.1-Beta 1
  FEATURES:

  CHANGES:

  BUGFIXES:


VERSION 2.3
  FEATURES:
    * Podcast channels and episodes can be dragged to add them to other
      providers. (BR 195704)
    * Track action buttons are now available in the label for the current track.
    * Bookmark button is now available in the Current Track applet.

  CHANGES:
    * When a podcast episode is no longer shown because of the episode limit,
      the downloaded file is also deleted from disk. (BR 227674)
    * The visibility of columns in the new Files Browser is now configurable.
    * Toolbar: "Skip icons", prev/next labels are aligned to the edges
    * Volume Dial: Gradient indicator and pointing cursor hint above the dial ring
    * Playlist layout editor: When copying a layout, set its current name as
      the default one for the copy. Thanks to Jakub Wieczorek <faw217@gmail.com>.
    * Set Media Keys as default global shortcuts for playlist navigation.
      (BR 194259)
    * Deleting files from the File Browser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations can now be canceled. 
    * Port Copy/Move to Collection actions to the new File Browser.
    * Script-Updater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES:
    * Fixed issue with applet icons with 2 lines of text getting cut off in the 
      applet explorer. (BR 227597)
    * Fixed crash when setting a custom cover while Nepomuk is enabled on the system.
      Thanks to Sebastian Trueg <trueg@kde.org> for the patch. (BR 197343)
    * Fix crashes when scanning for orphaned tracks immediately after adding tracks
      to an iPod. (BR 213097)
    * Made cover urls for tracks from Jamendo, Magnatune and scripted services
      available using DBus.
    * When an Audio CD track is chosen manually, make it active in the playlist