@@ -7,6 +7,8 @@ VERSION 2.3.1-Beta 1
   FEATURES:
 
   CHANGES:
+     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
+       and <trackfilename>.mood now work) 
 
   BUGFIXES:
 
